# metaphysical-scene-weaver

./: .env.example  .gitignore  100_PERCENT_COMPLETION.md  50_REMINDERS_CELEBRATION.md  73_PERCENT_MILESTONE.md  80_PERCENT_BREAKTHROUGH.md  ACTUAL_PROGRESS_UPDATE.md  ACTUAL_SCENE_COUNT.txt  ALERT_SYSTEM_BROKEN.md  BEYOND_200_COLLAB.txt  BEYOND_200_LEGENDARY_CHECK.md  BEYOND_CONSISTENCY_234.md  BEYOND_LEGENDARY_FINAL.md  BINARY_HARMONY_257.md  CELEBRATING_DISCIPLINE_255.md  CELEBRATION_CHECKPOINT_253.md  CHATGPT_CONVERTER_DIRECT_PROOF.md  CHATGPT_CONVERTER_READY.md  CHATGPT_CONVERTER_TEST_PROOF.md  CHATGPT_CONVERTER_VISUAL_PROOF.md  CHATGPT_NOT_BLOCKING_ANYMORE.md  CHATGPT_PROMPT_TEMPLATE.md  CHATGPT_SAFE_PROMPT_TEMPLATE.md  CHECKPOINT_190_TDD.md  CHECKPOINT_197_SUMMIT_NEAR.md  CHECKPOINT_203_BEYOND_LEGEND.md  CHECKPOINT_214_FLOWING_TDD.md  CHECKPOINT_233_INFINITY.md  CHOREOGRAPHY_CONSISTENCY_277.md  COMMIT_PROGRESS_UPDATE.md  CONTENT_STATUS.md  CONTRIBUTING.md  COSMIC_SCORE_228.md  COSMIC_SYMPHONY_262.md  COUNTDOWN_195_TO_200.md  CREATIVE_CONTENT_GUIDE.md  CREATIVE_TEAM_BRIEF.md  CRITICAL_CHATGPT_COMPATIBILITY.md  CURRENT_PROJECT_STATUS.md  DAILY_ACHIEVEMENT_SUMMARY.md  (+300 more)
.claude/: settings.json
archive_meta_work_20250806_060951/: 60_PERCENT_MILESTONE.md  70_REMINDERS_MILESTONE.md  ABYSSAL_PROGRESS_218.md  ALCHEMY_COMPLETE_289.md  BEYOND_250_ETERNAL.md  BEYOND_ETERNAL_CHECK_211.md  CELEBRATION_SAVE_256.md  CHECKPOINT_208_ETERNAL_TDD.md  CHECKPOINT_220_CRYSTAL_TDD.md  COLLABORATION_GUIDE.md  COLOR_PSYCHOLOGY_279.md  CORRECT_SCRIPT_STATUS.md  CRITICAL_ALERT.md  CRYSTALLINE_DEPTHS_CHECK_219.md  CURRENT_STATUS.md  DISCIPLINE_DANCE_241.md  EMOTIONAL_ARC_281.md  EMOTION_BLENDING_285.md  EPIC_SESSION_COMPLETE.md  EPIC_SESSION_SUMMARY.md  ETERNAL_204.md  ETERNAL_COMPLETION_252.md  ETERNAL_CONSISTENCY_237.md  ETERNAL_SAVE_243.md  ETERNAL_SYMPHONY_225.md  ETERNAL_WITNESS_244.md  FINAL_HARMONY_242.md  FINAL_PROJECT_STATUS.md  GIT_COMMIT_REMINDERS_LOG.md  HARMONIC_CONVERGENCE_229.md  HEALING_WATERS_267.md  IDENTITY_TRILOGY_274.md  INFINITY_CONSISTENCY_232.md  LIGHT_SYMPHONY_CHECK_224.md  METADATA_CONSISTENCY_269.md  (+48 more)
(+2929 files in other folders)
