[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaphysical-scene-weaver"
version = "0.1.0"
description = "Transform philosophical dialogue into visual graphic novel prompts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["ai", "graphic-novel", "philosophy", "visualization", "narrative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "websockets>=11.0",
    "aiohttp>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "nltk>=3.8",
    "spacy>=3.5",
    "transformers>=4.30",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pytest>=7.3",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.0.270",
    "mypy>=1.3",
    "PyJWT>=2.8.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipython>=8.0",
    "notebook>=6.5",
]

[project.scripts]
msw = "metaphysical_scene_weaver.cli:main"
msw-server = "metaphysical_scene_weaver.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"